--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,11 @@ volumes:
   pgdata:
   redis_data:
 
+
+networks:
+  cc_network:
+    driver: bridge
+
 services:
   postgres:
     image: postgres:17.3-alpine
@@ -11,6 +16,8 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+      - cc_network
 
   redis:
     image: redis:7.2-alpine
@@ -20,18 +27,23 @@ services:
       - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
     volumes:
       - 'redis_data:/bitnami/redis/data'
+    networks:
+      - cc_network
 
   backend:
     container_name: backend
     build:
       context: .
       dockerfile: ./cicd/docker/backend/Dockerfile
+    restart: unless-stopped
     ports:
       - "8000:8000"
     env_file:
       - cicd/.env
     volumes:
-      - ./src:/srv/src
+      - ./:/srv/
+    networks:
+      - cc_network
     depends_on:
       - postgres
       - redis
