feat: пермишен и url для телеграм

--- a/cicd/.env-example
+++ b/cicd/.env-example
@@ -1,5 +1,6 @@
 DEBUG=on
 SECRET_KEY=your_key
+TELEGRAM_BOT_SECRET_API_TOKEN = your_token
 
 DATABASE_URL=postgres://postgres@postgres:5432/postgres
 POSTGRES_HOST_AUTH_METHOD=trust
