--- a/telegram/.env-example
+++ b/telegram/.env-example
@@ -1,1 +1,8 @@
+BOT_TOKEN=Token
+
 TELEGRAM_BOT_SECRET_API_TOKEN=your_token
+BACKEND_URL=http://backend:8000/
+
+IS_WEBHOOK=0
+WEBHOOK_URL=https://yourdomain.com/webhook
+CERT_PATH=cert/path
