--- a/telegram/pyproject.toml
+++ b/telegram/pyproject.toml
@@ -1,25 +1,19 @@
 [tool.poetry]
-name = "CashChange"
+name = "CashChangeBot"
 version = "0.1.0"
 description = ""
 authors = ["poldy <n_i_x_i@tuta.io>"]
 
 [tool.poetry.dependencies]
-python = ">=3.13, <3.14"
-django = "5.1.6"
-djangorestframework = "3.15.2"
+python = ">=3.11, <3.14"
+python-telegram-bot = "21.11.1"
+python-dotenv = "1.0.0"
 ruff = ">=0.9.6,<0.10.0"
-django-environ = ">=0.12.0,<0.13.0"
-psycopg2-binary = ">=2.9.10,<3.0.0"
-django-filter = ">=25.1,<26.0"
-djangorestframework-simplejwt = ">=5.4.0,<6.0.0"
-whitenoise = ">=6.9.0,<7.0.0"
-django-redis = ">=5.4.0,<6.0.0"
-drf-spectacular = {extras = ["sidecar"], version = ">=0.28.0,<0.29.0"}
+aiohttp = "^3.11.13"
 
 [tool.poetry.group.test.dependencies]
-pytest-django = "^4.10.0"
 mixer = "^7.2.2"
+pytest = "8.3.4"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -44,7 +38,7 @@ lint.ignore = [
 
 exclude = [
     ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox", ".pants.d", ".ruff_cache", ".svn", ".tox",
-    "__pypackages__", "_build", "buck-out", "build", "dist", "frontend/node_modules", "venv", ".env", "__init__.py",
+    "__pypackages__", "_build", "buck-out", "build", "dist", "venv", ".env", "__init__.py",
 ]
 
 lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
@@ -64,4 +58,3 @@ line-ending = "auto"
 
 [tool.ruff.lint.extend-per-file-ignores]
 "tests/*.py" = ["S101", "S106", "D", "ANN"]
-"**/migrations/*.py" = ["S101", "S106", "D", "ANN"]
