feat:create message log

--- a/backend/.env-example
+++ b/backend/.env-example
@@ -2,6 +2,9 @@ DEBUG=on
 SECRET_KEY=your_key
 TELEGRAM_BOT_SECRET_API_TOKEN=your_token
 
+CENTIFUGO_SECRET=your_token
+CENTRIFUGO_HTTP_API_KEY=api_key
+
 DATABASE_URL=postgres://postgres@postgres:5432/postgres
 POSTGRES_HOST_AUTH_METHOD=trust
 
