--- a/cicd/nginx/nginx.conf
+++ b/cicd/nginx/nginx.conf
@@ -16,9 +16,9 @@ http {
   #  server frontend:5173;
   #}
 
-  #upstream centrifugo {
-  #  server centrifugo:8000;
-  #}
+  upstream centrifugo {
+    server centrifugo:8888;
+  }
 
   server {
     listen 80;
@@ -59,17 +59,17 @@ http {
       proxy_redirect      default;
     }
 
-  #location /connection/websocket {
-  #  proxy_pass          http://centrifugo;
-  #  proxy_http_version  1.1;
-  #  proxy_redirect      default;
-  #  proxy_set_header    Upgrade $http_upgrade;
-  #  proxy_set_header    Connection "upgrade";
-  #  proxy_set_header    Host $host;
-  #  proxy_set_header    X-Real-IP $remote_addr;
-  #  proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
-  #  proxy_set_header    X-Forwarded-Host $server_name;
-  #}
+    location /ws {
+      proxy_pass          http://centrifugo;
+      proxy_http_version  1.1;
+      proxy_redirect      default;
+      proxy_set_header    Upgrade $http_upgrade;
+      proxy_set_header    Connection "upgrade";
+      proxy_set_header    Host $host;
+      proxy_set_header    X-Real-IP $remote_addr;
+      proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header    X-Forwarded-Host $server_name;
+    }
 
   #location / {
   #  proxy_pass          http://frontend;
