--- a/cicd/nginx/nginx.conf
+++ b/cicd/nginx/nginx.conf
@@ -12,6 +12,10 @@ http {
     server backend:8000;
   }
 
+  upstream flower {
+    server flower:5555;
+  }
+
   #upstream frontend {
   #  server frontend:5173;
   #}
@@ -38,6 +42,22 @@ http {
       proxy_set_header    X-Telegram-Bot-Token $http_x_telegram_bot_token;
       proxy_set_header    X-Telegram-Bot-Token $http_x_telegram_bot_token;
       proxy_set_header    Authorization $http_authorization;
+    }
+
+    location /flower/ {
+        proxy_pass http://flower/;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
     location /admin {
