--- a/backend/.env-example
+++ b/backend/.env-example
@@ -10,3 +10,10 @@ POSTGRES_HOST_AUTH_METHOD=trust
 
 REDIS_HOST=redis
 REDIS_PORT=6379
+REDIS_DB=0
+REDIS_DB_CELERY=3
+
+FLOWER_BASIC_AUTH=admin:admin
+FLOWER_ADDRESS=0.0.0.0
+FLOWER_PORT=5555
+FLOWER_URL_PREFIX=/flower
