--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,7 +16,9 @@ djangorestframework-simplejwt = ">=5.4.0,<6.0.0"
 whitenoise = ">=6.9.0,<7.0.0"
 django-redis = ">=5.4.0,<6.0.0"
 drf-spectacular = {extras = ["sidecar"], version = ">=0.28.0,<0.29.0"}
-requests = "^2.32.3"
+requests = "2.32.3"
+celery = "5.4.0"
+flower = "2.0.1"
 
 [tool.poetry.group.test.dependencies]
 pytest-django = "^4.10.0"
